--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,53 +3,17 @@
    License: none (public domain)
 */
 
+
+/* Import Tailwindcss */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 /* Import Typography */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:wght@400;700&display=swap');
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
 
 /* Variables */
 
@@ -63,6 +27,7 @@ table {
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--black);
+    background-color: var(--black);
     
 }
 
@@ -73,9 +38,19 @@ body {
 /* Layout */
 
 .hero {
+    height: 100vh;
+}
+
+.hero::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background-image: url("../images/genzdev-hero-image.jpg");
     background-size: 100%;
     background-position: center;
-	height: 100vh;
-	position: relative;
+    opacity: .4;
+    z-index: -1;
 }
