--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -49,6 +49,7 @@ body {
     bottom: 0;
     left: 0;
     background-image: url("../images/genzdev-hero-image.jpg");
+    background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
     opacity: .4;
