--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,7 +13,7 @@
 
 /* Import Typography */
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 /* Variables */
 
