--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -26,7 +26,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    color: var(--black);
+    color: var(--white);
     background-color: var(--black);
     
 }
